Fixed Line Spacing issue
Within this commit, I fixed an issue with the line spacing that caused the prompt text to squish into itself if it took up more than one line.

--- a/client/src/app/game-page/game-page.scss
+++ b/client/src/app/game-page/game-page.scss
@@ -32,6 +32,7 @@ li {
   text-align: center;
   top: 25vh;
   left: 0;
+  line-height: 1;
 }
 
 #response-field {
